update restaurant page

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="src/scss/primeng.scss">
   <link rel="stylesheet" href="src/scss/tailwind.scss">
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
